--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,27 +14,28 @@ jobs:
 defaults:
  run:
    working-directory: main
-steps:
-  - name: checkout
-    uses: action/checkout@v2
+ steps:
+     - uses: action/checkout@v2
+     - uses: action/setup-terraform@v2
+     - name: checkout
     
-  - name: Setup Terraform
-    uses: hashicorp/setup-terraform@v1
-    with:
-     terraform_version: 1.0.1
-     terraform_wrapper: false
+     - name: Setup Terraform
+       uses: hashicorp/setup-terraform@v1
+       with:
+       terraform_version: 1.0.1
+       terraform_wrapper: false
      
-  - name: Terraform Format
-    id: fmt
-    run: terraform fmt -check
-  - name: Terraform Init
-    id: init
-    run: terraform init
-  - name: Terraform Plan
-    id: plan
-    run: terraform plan
-  - name: Terraform Apply
-    run: terraform apply -auto-approve
+     - name: Terraform Format
+       id: fmt
+       run: terraform fmt -check
+     - name: Terraform Init
+       id: init
+       run: terraform init
+     - name: Terraform Plan
+       id: plan
+       run: terraform plan
+     - name: Terraform Apply
+       run: terraform apply -auto-approve
     
      
   
