--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,13 +30,13 @@ jobs:
 
         - name: terraform init
           run: |
-             module
+             main
              terraform init -reconfigure -backend-config="bucket=${{ env.BUCKET }}" -backend-config="key=${{ env.TFSTATE_FILE }}" -backend-config="region=${{ env.aws_region }}"
         - name: terraform plan
           run: |
-            module
+            main
             terraform plan
         - name: terraform apply
           run: |
-             module 
+             main 
               terraform apply -auto-approve
