--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,7 +26,7 @@ jobs:
           with:
             aws-access-key-id: ${{ secrets.AWSACCESSKEYID }}
             aws-secret-access-key: ${{ secrets.AWSSECRETACCESSKEY }}
-            aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+            aws-session-token: ${{ secrets.AWSSESSIONTOKEN }}
             aws-region: ${{ env.aws_region }}
 
         - name: terraform init
